Store branding logo data and update logo guidance

--- a/public/index.html
+++ b/public/index.html
@@ -2786,7 +2786,7 @@
                 <span class="material-symbols-rounded">upload</span>
                 <input type="file" id="brandingLogo" class="md-input" accept="image/*">
               </div>
-              <p class="text-muted" id="brandingHelp">PNG, JPG, SVG, or WebP up to 2 MB.</p>
+              <p class="text-muted" id="brandingHelp">PNG, JPG, SVG, or WebP up to 2 MB. Best results with a 512x512px image and transparent background.</p>
             </div>
             <div class="settings-form__toggle settings-form__toggle--inline">
               <input type="checkbox" id="brandingRemoveLogo">
