Add learning focus mode panel

--- a/public/index.html
+++ b/public/index.html
@@ -318,6 +318,52 @@
       font-size: 13px;
     }
 
+    .learning-focus-panel {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .learning-focus-header {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .learning-focus-actions {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 12px;
+    }
+
+    .learning-focus-title {
+      margin: 0;
+      font-size: 24px;
+      font-weight: 700;
+      color: #0f172a;
+    }
+
+    #learningFocusPanel .learning-player {
+      width: 100%;
+    }
+
+    #learningFocusPanel .learning-player-video {
+      width: 100%;
+      min-height: 320px;
+    }
+
+    #learningFocusPanel .learning-player-actions {
+      justify-content: space-between;
+    }
+
+    #learningFocusPanel .learning-player-section--progress,
+    #learningFocusPanel .learning-progress-note,
+    #learningFocusPanel #learningMarkComplete {
+      display: none;
+    }
+
     .learning-hub-status {
       padding: 12px 16px;
       border-radius: 10px;
@@ -5215,47 +5261,65 @@
                 <span id="learningLessonProgressText" class="learning-progress-text">0%</span>
               </div>
             </div>
-            <div class="learning-player">
-              <div class="learning-player-video">
-                <video id="learningVideo" controls playsinline class="learning-video hidden"></video>
-                <iframe id="learningVideoEmbed" class="learning-video-embed hidden" title="Lesson video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <div id="learningVideoPlaceholder" class="learning-video-placeholder">
-                  <span class="material-symbols-rounded">videocam</span>
-                  <p>Select a lesson with a video or asset to begin.</p>
-                </div>
-              </div>
-              <div class="learning-player-body">
-                <div class="learning-player-section">
-                  <h4>Lesson Assets</h4>
-                  <div id="learningReadingList" class="learning-reading-list"></div>
-                </div>
-                <div class="learning-player-section">
-                  <h4>Module Progress</h4>
-                  <div class="learning-progress-inline">
-                    <div class="learning-progress-bar">
-                      <div id="learningModuleProgressBar" class="learning-progress-fill" style="width: 0%;"></div>
-                    </div>
-                    <span id="learningModuleProgressText" class="learning-progress-text">0%</span>
+            <div id="learningPlayerDock">
+              <div class="learning-player">
+                <div class="learning-player-video">
+                  <video id="learningVideo" controls playsinline class="learning-video hidden"></video>
+                  <iframe id="learningVideoEmbed" class="learning-video-embed hidden" title="Lesson video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <div id="learningVideoPlaceholder" class="learning-video-placeholder">
+                    <span class="material-symbols-rounded">videocam</span>
+                    <p>Select a lesson with a video or asset to begin.</p>
                   </div>
                 </div>
-                <div class="learning-player-actions">
-                  <button id="learningPrevLesson" type="button" class="md-button md-button--outlined">
-                    <span class="material-symbols-rounded">skip_previous</span>
-                    Previous
-                  </button>
-                  <button id="learningMarkComplete" type="button" class="md-button md-button--filled" disabled>
-                    <span class="material-symbols-rounded">check_circle</span>
-                    Mark Complete
-                  </button>
-                  <button id="learningNextLesson" type="button" class="md-button md-button--outlined">
-                    <span class="material-symbols-rounded">skip_next</span>
-                    Next
-                  </button>
+                <div class="learning-player-body">
+                  <div class="learning-player-section">
+                    <h4>Lesson Assets</h4>
+                    <div id="learningReadingList" class="learning-reading-list"></div>
+                  </div>
+                  <div class="learning-player-section learning-player-section--progress">
+                    <h4>Module Progress</h4>
+                    <div class="learning-progress-inline">
+                      <div class="learning-progress-bar">
+                        <div id="learningModuleProgressBar" class="learning-progress-fill" style="width: 0%;"></div>
+                      </div>
+                      <span id="learningModuleProgressText" class="learning-progress-text">0%</span>
+                    </div>
+                  </div>
+                  <div class="learning-player-actions">
+                    <button id="learningPrevLesson" type="button" class="md-button md-button--outlined">
+                      <span class="material-symbols-rounded">skip_previous</span>
+                      Previous
+                    </button>
+                    <button id="learningMarkComplete" type="button" class="md-button md-button--filled" disabled>
+                      <span class="material-symbols-rounded">check_circle</span>
+                      Mark Complete
+                    </button>
+                    <button id="learningNextLesson" type="button" class="md-button md-button--outlined">
+                      <span class="material-symbols-rounded">skip_next</span>
+                      Next
+                    </button>
+                  </div>
+                  <p class="learning-progress-note">Progress updates as you watch lesson videos or mark lessons complete.</p>
                 </div>
-                <p class="learning-progress-note">Progress updates as you watch lesson videos or mark lessons complete.</p>
               </div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- Learning Focus Mode Panel -->
+      <section id="learningFocusPanel" class="panel hidden">
+        <div class="learning-focus-panel">
+          <div class="learning-focus-header">
+            <div class="learning-focus-actions">
+              <button id="learningFocusBack" type="button" class="md-button md-button--text">
+                <span class="material-symbols-rounded">arrow_back</span>
+                Back to Course Map
+              </button>
+            </div>
+            <h2 id="learningFocusTitle" class="learning-focus-title">Select a lesson to start playback.</h2>
+          </div>
+          <div id="learningFocusPlayerDock"></div>
         </div>
       </section>
 
