Align career page builder defaults with /careers template

--- a/public/index.html
+++ b/public/index.html
@@ -7199,7 +7199,7 @@
             <span class="material-symbols-rounded">build</span>
             Career Page Builder
           </div>
-          <p class="card-subtitle">Build custom HTML sections for your careers page header, updates, content, and footer.</p>
+          <p class="card-subtitle">Starts from the live <code>/careers</code> section-by-section template. Edit text and hyperlinks to match your branding while keeping the same layout.</p>
           <form id="careerPageSettingsForm" class="settings-form">
             <div class="settings-form__fields settings-form__fields--full">
               <label class="md-label" for="careerPageHeaderHtml">Header HTML</label>
