Make careers logo and menu links configurable in settings

--- a/public/careers.html
+++ b/public/careers.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-50 text-gray-900">
   <header class="sticky top-0 z-20">
     <nav class="bg-white shadow px-8 py-4 flex items-center justify-between max-w-6xl mx-auto">
-      <a href="https://www.brillar.io" class="flex items-center space-x-2">
+      <a id="careersBrandLogoLink" href="https://www.brillar.io" class="flex items-center space-x-2">
         <img
           id="careersBrandLogo"
           src="/logo.png"
@@ -21,12 +21,12 @@
         />
       </a>
       <div class="flex items-center space-x-6 text-sm font-medium text-gray-700">
-        <a href="https://www.brillar.io/" class="hover:text-blue-600">Home</a>
-        <a href="https://www.brillar.io/#about" class="hover:text-blue-600">About</a>
-        <a href="https://www.brillar.io/#solutions" class="hover:text-blue-600">Solutions</a>
-        <a href="https://www.brillar.io/#partners" class="hover:text-blue-600">Partners</a>
-        <a href="https://www.brillar.io/#contact" class="hover:text-blue-600">Contact</a>
-        <a href="https://hr.brillar.ai/careers" class="text-blue-600">Careers</a>
+        <a id="careerNavHome" href="https://www.brillar.io/" class="hover:text-blue-600">Home</a>
+        <a id="careerNavAbout" href="https://www.brillar.io/#about" class="hover:text-blue-600">About</a>
+        <a id="careerNavSolutions" href="https://www.brillar.io/#solutions" class="hover:text-blue-600">Solutions</a>
+        <a id="careerNavPartners" href="https://www.brillar.io/#partners" class="hover:text-blue-600">Partners</a>
+        <a id="careerNavContact" href="https://www.brillar.io/#contact" class="hover:text-blue-600">Contact</a>
+        <a id="careerNavCareers" href="/careers" class="text-blue-600">Careers</a>
       </div>
     </nav>
   </header>
