--- a/public/index.html
+++ b/public/index.html
@@ -7202,6 +7202,62 @@
           <p class="card-subtitle">Starts from the live <code>/careers</code> section-by-section template. Edit text and hyperlinks to match your branding while keeping the same layout.</p>
           <form id="careerPageSettingsForm" class="settings-form">
             <div class="settings-form__fields settings-form__fields--full">
+              <label class="md-label" for="careerPageLogoLink">Logo click-through link</label>
+              <div class="md-input-wrapper">
+                <span class="material-symbols-rounded">link</span>
+                <input id="careerPageLogoLink" type="url" class="md-input" value="https://www.brillar.io" placeholder="https://www.brillar.io" />
+              </div>
+            </div>
+
+            <div class="settings-form__fields">
+              <label class="md-label" for="careerPageMenuHomeLink">Home link</label>
+              <div class="md-input-wrapper">
+                <span class="material-symbols-rounded">home</span>
+                <input id="careerPageMenuHomeLink" type="text" class="md-input" value="https://www.brillar.io/" placeholder="https://www.brillar.io/" />
+              </div>
+            </div>
+
+            <div class="settings-form__fields">
+              <label class="md-label" for="careerPageMenuAboutLink">About link</label>
+              <div class="md-input-wrapper">
+                <span class="material-symbols-rounded">info</span>
+                <input id="careerPageMenuAboutLink" type="text" class="md-input" value="https://www.brillar.io/#about" placeholder="https://www.brillar.io/#about" />
+              </div>
+            </div>
+
+            <div class="settings-form__fields">
+              <label class="md-label" for="careerPageMenuSolutionsLink">Solutions link</label>
+              <div class="md-input-wrapper">
+                <span class="material-symbols-rounded">apps</span>
+                <input id="careerPageMenuSolutionsLink" type="text" class="md-input" value="https://www.brillar.io/#solutions" placeholder="https://www.brillar.io/#solutions" />
+              </div>
+            </div>
+
+            <div class="settings-form__fields">
+              <label class="md-label" for="careerPageMenuPartnersLink">Partners link</label>
+              <div class="md-input-wrapper">
+                <span class="material-symbols-rounded">handshake</span>
+                <input id="careerPageMenuPartnersLink" type="text" class="md-input" value="https://www.brillar.io/#partners" placeholder="https://www.brillar.io/#partners" />
+              </div>
+            </div>
+
+            <div class="settings-form__fields">
+              <label class="md-label" for="careerPageMenuContactLink">Contact link</label>
+              <div class="md-input-wrapper">
+                <span class="material-symbols-rounded">mail</span>
+                <input id="careerPageMenuContactLink" type="text" class="md-input" value="https://www.brillar.io/#contact" placeholder="https://www.brillar.io/#contact" />
+              </div>
+            </div>
+
+            <div class="settings-form__fields">
+              <label class="md-label" for="careerPageMenuCareersLink">Careers link</label>
+              <div class="md-input-wrapper">
+                <span class="material-symbols-rounded">work</span>
+                <input id="careerPageMenuCareersLink" type="text" class="md-input" value="/careers" placeholder="/careers" />
+              </div>
+            </div>
+
+            <div class="settings-form__fields settings-form__fields--full">
               <label class="md-label" for="careerPageHeaderBackgroundColor">Header banner background color</label>
               <div class="md-input-wrapper">
                 <span class="material-symbols-rounded">palette</span>
