Use organization settings logo on AI interview page

--- a/public/careers.html
+++ b/public/careers.html
@@ -20,7 +20,7 @@
         />
       </div>
       <div class="flex items-center space-x-6 text-sm font-medium text-gray-700">
-        <a href="https://hrconnet.site/careers" class="text-blue-600">Careers</a>
+        <a href="https://sagasiaconsulting.com/careers" class="text-blue-600">Careers</a>
       </div>
     </nav>
   </header>
@@ -31,7 +31,7 @@
         <p class="text-sm uppercase tracking-widest text-blue-100">HR Connect Careers</p>
         <h1 class="text-4xl sm:text-5xl font-bold mt-4">Your Digital Transformation Partner</h1>
         <h2 class="text-2xl sm:text-3xl font-semibold mt-2 text-blue-100">Transforming tomorrow</h2>
-        <p class="mt-4 max-w-3xl text-lg text-blue-100">Join Brillar and help drive digital transformation across Southeast Asia.</p>
+        <p class="mt-4 max-w-3xl text-lg text-blue-100">Join Sagasia Consulting and help drive digital transformation across Southeast Asia.</p>
         <div class="mt-8">
           <a id="view-open-positions" href="#open-positions" class="inline-block px-6 py-3 bg-white text-blue-700 font-semibold rounded-md shadow hover:bg-blue-50">View Open Positions</a>
         </div>
@@ -65,7 +65,7 @@
 
   <footer id="careerCustomFooter" class="bg-gray-900 text-gray-300 text-sm py-6 mt-10">
     <div class="max-w-5xl mx-auto px-6 text-center space-y-1">
-      <p>© Brillar. All rights reserved.</p>
+      <p>© Sagasia Consulting. All rights reserved.</p>
     </div>
   </footer>
 
