--- a/public/index.html
+++ b/public/index.html
@@ -4877,7 +4877,7 @@
             People-first portal
           </p>
           <h1 id="welcomePortalName" class="welcome-title">HR Connect</h1>
-          <p class="welcome-copy">A cohesive workspace for leave, performance, recruitment, and talent experiences — all with Brillar's modern material-inspired feel.</p>
+          <p class="welcome-copy">A cohesive workspace for leave, performance, recruitment, and talent experiences — all with Sagasia Consulting's modern material-inspired feel.</p>
         </div>
         <div class="welcome-badges">
           <span class="welcome-badge">
@@ -4915,7 +4915,7 @@
             <label class="md-label" for="loginEmail">Work Email</label>
             <div class="md-input-wrapper">
               <span class="material-symbols-rounded">mail</span>
-              <input id="loginEmail" name="email" type="email" placeholder="you@hrconnet.site" required class="md-input">
+              <input id="loginEmail" name="email" type="email" placeholder="you@sagasiaconsulting.com" required class="md-input">
             </div>
           </div>
           <div class="md-field">
