--- a/public/ai-interview.html
+++ b/public/ai-interview.html
@@ -3,35 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brillar AI Interview</title>
+  <title>Sagasia Consulting AI Interview</title>
   <link rel="icon" href="/logo.png" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-900">
   <header class="sticky top-0 z-20">
     <nav class="bg-white shadow px-8 py-4 flex items-center justify-between max-w-6xl mx-auto">
-      <a href="https://hrconnet.site" class="flex items-center space-x-2">
+      <a href="https://sagasiaconsulting.com" class="flex items-center space-x-2">
         <img
-          fetchpriority="high"
-          sizes="131px"
-          srcset="https://static.wixstatic.com/media/34647d_4924e46631c3463abed06f9e3147eba3~mv2.png/v1/fill/w_131,h_57,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/Screen%20Shot%202019-07-09%20at%2010_05_edited_p.png 1x,
-                  https://static.wixstatic.com/media/34647d_4924e46631c3463abed06f9e3147eba3~mv2.png/v1/fill/w_262,h_114,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/Screen%20Shot%202019-07-09%20at%2010_05_edited_p.png 2x"
-          id="img_comp-k2yn8cmg"
-          src="https://static.wixstatic.com/media/34647d_4924e46631c3463abed06f9e3147eba3~mv2.png/v1/fill/w_131,h_57,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/Screen%20Shot%202019-07-09%20at%2010_05_edited_p.png"
-          alt="Brillar Logo"
-          style="object-fit:cover"
-          class="BI8PVQ Tj01hh h-12 w-auto"
+          id="aiInterviewBrandLogo"
+          alt="Organization Logo"
+          class="h-12 w-auto"
+          style="display: none;"
           width="131"
           height="57"
         />
       </a>
       <div class="flex items-center space-x-6 text-sm font-medium text-gray-700">
-        <a href="https://hrconnet.site/" class="hover:text-blue-600">Home</a>
-        <a href="https://hrconnet.site/#about" class="hover:text-blue-600">About</a>
-        <a href="https://hrconnet.site/#solutions" class="hover:text-blue-600">Solutions</a>
-        <a href="https://hrconnet.site/#partners" class="hover:text-blue-600">Partners</a>
-        <a href="https://hrconnet.site/#contact" class="hover:text-blue-600">Contact</a>
-        <a href="https://hrconnet.site/careers" class="text-blue-600">Careers</a>
+        <a href="https://sagasiaconsulting.com/" class="hover:text-blue-600">Home</a>
+        <a href="https://sagasiaconsulting.com/#about" class="hover:text-blue-600">About</a>
+        <a href="https://sagasiaconsulting.com/#solutions" class="hover:text-blue-600">Solutions</a>
+        <a href="https://sagasiaconsulting.com/#partners" class="hover:text-blue-600">Partners</a>
+        <a href="https://sagasiaconsulting.com/#contact" class="hover:text-blue-600">Contact</a>
+        <a href="https://sagasiaconsulting.com/careers" class="text-blue-600">Careers</a>
       </div>
     </nav>
   </header>
@@ -39,13 +34,13 @@
   <main>
     <section class="bg-gradient-to-r from-blue-900 via-blue-700 to-blue-500 text-white">
       <div class="max-w-5xl mx-auto px-6 py-16">
-        <p class="text-sm uppercase tracking-widest text-blue-100">Brillar AI Interview</p>
+        <p class="text-sm uppercase tracking-widest text-blue-100">Sagasia Consulting AI Interview</p>
         <h1 class="text-4xl sm:text-5xl font-bold mt-4">Your Digital Interview Experience</h1>
-        <h2 class="text-2xl sm:text-3xl font-semibold mt-2 text-blue-100">Guided by Brillar</h2>
+        <h2 class="text-2xl sm:text-3xl font-semibold mt-2 text-blue-100">Guided by Sagasia Consulting</h2>
         <p class="mt-4 max-w-3xl text-lg text-blue-100">Share your expertise through our AI-assisted interview. Complete each question at your own pace and submit when you're ready.</p>
         <div class="mt-8 flex flex-wrap gap-4">
           <a href="#interview" class="inline-block px-6 py-3 bg-white text-blue-700 font-semibold rounded-md shadow hover:bg-blue-50">Start Interview</a>
-          <a href="https://hrconnet.site/#contact" class="inline-block px-6 py-3 bg-transparent border border-white text-white font-semibold rounded-md hover:bg-white hover:text-blue-700">Need Help?</a>
+          <a href="https://sagasiaconsulting.com/#contact" class="inline-block px-6 py-3 bg-transparent border border-white text-white font-semibold rounded-md hover:bg-white hover:text-blue-700">Need Help?</a>
         </div>
       </div>
     </section>
@@ -72,7 +67,7 @@
 
   <footer class="bg-gray-900 text-gray-300 text-sm py-6 mt-10">
     <div class="max-w-5xl mx-auto px-6 text-center space-y-1">
-      <p>© Brillar. All rights reserved.</p>
+      <p>© Sagasia Consulting. All rights reserved.</p>
     </div>
   </footer>
 
