--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,93 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" href="material-theme.css">
   <style>
+    .ai-interview-session-card {
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+      padding: 16px;
+      border-radius: 14px;
+      border: 1px solid #dbeafe;
+      background: linear-gradient(180deg, #f8fbff 0%, #ffffff 100%);
+      box-shadow: 0 10px 24px rgba(37, 99, 235, 0.08);
+    }
+
+    .ai-interview-session-pills {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+    }
+
+    .ai-interview-pill {
+      display: inline-flex;
+      align-items: center;
+      border-radius: 999px;
+      padding: 5px 10px;
+      font-size: 11px;
+      font-weight: 700;
+      letter-spacing: 0.01em;
+    }
+
+    .ai-interview-pill--status {
+      color: #1d4ed8;
+      background: #dbeafe;
+    }
+
+    .ai-interview-pill--mode {
+      color: #6d28d9;
+      background: #ede9fe;
+    }
+
+    .ai-interview-pill--verdict {
+      color: #374151;
+      background: #f3f4f6;
+    }
+
+    .ai-interview-session-grid {
+      display: grid;
+      gap: 12px;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    }
+
+    .ai-interview-session-meta-item {
+      padding: 12px;
+      border-radius: 10px;
+      border: 1px solid #e5e7eb;
+      background: #ffffff;
+    }
+
+    .ai-interview-session-meta-item--wide {
+      grid-column: 1 / -1;
+    }
+
+    .ai-interview-session-label {
+      font-size: 11px;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      color: #6b7280;
+      margin-bottom: 4px;
+      font-weight: 600;
+    }
+
+    .ai-interview-session-value {
+      font-size: 14px;
+      line-height: 1.45;
+      color: #111827;
+      font-weight: 600;
+      word-break: break-word;
+    }
+
+    .ai-interview-session-note {
+      margin-top: 10px;
+      padding: 10px 12px;
+      border-left: 3px solid #2563eb;
+      border-radius: 8px;
+      background: #eff6ff;
+      color: #1f2937;
+      font-size: 12px;
+      line-height: 1.45;
+    }
+
     /* Employee management layout styles */
     .kpi-grid {
       display: grid;
